Completed asp devs project part 1

--- a/aspiring-devs/src/App.html
+++ b/aspiring-devs/src/App.html
@@ -16,9 +16,9 @@
     <h1 class="text-3xl text-center my-5">The Grand Library</h1>
 
     <div class="text-center p-32">
-      <h1 class="text-3xl font-extrabold">Title</h1>
-      <h2>Author Name</h2>
-      <p class="mt-10">Story Body</p>
+      <h1 id="story-title" class="text-3xl font-extrabold">Title</h1>
+      <h2 id="author-name"></h2>
+      <p id="story-body" class="mt-10">Story Body</p>
     </div>
 
     <div class="lg:w-1/2 mx-auto">
@@ -29,7 +29,7 @@
         </label>
       </div>
       <div class="md:w-2/4">
-        <input class="bg-zinc-200 appearance-none border-2 border-gray-200 rounded w-full py-2 px-4 text-gray-700 leading-tight focus:outline-none focus:bg-white focus:border-purple-500" id="inline-full-name" type="text" value="Jane Doe">
+        <input id="user-input"class="bg-zinc-200 appearance-none border-2 border-gray-200 rounded w-full py-2 px-4 text-gray-700 leading-tight focus:outline-none focus:bg-white focus:border-purple-500" id="inline-full-name" type="text" value="Jane Doe">
       </div>
       <div class="md:w-1/4">
         <button id="add-author" class="whitespace-nowrap bg-gray-100 border-2 border-gray-500 rounded w-full py-2 px-4 text-gray-700 leading-tight hover:outline-none hover:bg-white hover:border-purple-500 focus:outline-none focus:bg-white focus:border-purple-500 transition duration-300">Add Author</button>
