Added post method

--- a/aspiring-devs-p1/src/App.html
+++ b/aspiring-devs-p1/src/App.html
@@ -35,7 +35,13 @@
     <!-- Replace everything in here -->
     <h1>Get request /story</h1>
     <p id="console-log">console-log</p>
-    <!-- Don't delete below this line -->
+    <input id="get-story" type="button" value="Get /story ">
+    <input id="story-id" type="text">
+    <input id="get-story-id" type="button" value="Get /story/id">
+    <input id="clear" type="button" onclick="clear" value="clear-text">
     <hr>
+    <input id="post_story_content" type="text" placeholder="story body">
+    <input id="post_story_title" type="text" placeholder="title">
+    <input id="post_story" type="button" value="POST /story">
   </body>
 </html>
