Started working on PUT method

--- a/aspiring-devs-p1/src/App.html
+++ b/aspiring-devs-p1/src/App.html
@@ -43,5 +43,10 @@
     <input id="post_story_content" type="text" placeholder="story body">
     <input id="post_story_title" type="text" placeholder="title">
     <input id="post_story" type="button" value="POST /story">
+    <hr>
+    <input id="update_story_content" type="text" placeholder="story body">
+    <input id="update_story_title" type="text" placeholder="title">
+    <input id="update_story_id" type="text" placeholder="Story ID">
+    <input id="update_story" type="button" value="UPDATE PUT /story">
   </body>
 </html>
