Created authorization requirement

--- a/aspiring-devs-p1/src/App.html
+++ b/aspiring-devs-p1/src/App.html
@@ -33,6 +33,11 @@
 
   <body>
     <h1>The Library of <i>CRUD</i></h1>
+    <input id="username" type="text" placeholder="username">
+    <input id="password" type="password" placeholder="Password">
+
+    <hr>
+
     <input id="story-id" type="text">
     <input id="get-story-id" type="button" value="Get /story/id">
     <input id="clear" type="button" onclick="clear" value="clear-text">
